# leanswarm

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_dataset.yml  bug_report.yml  config.yml  feature_request.yml  local_model_optimizer.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/: README.md
deploy/landing/: index.html
deploy/nginx/: leanswarm.me.conf
deploy/scripts/: setup.sh
deploy/systemd/: leanswarm-update.service  leanswarm-update.timer  leanswarm.service
docs/: architecture.md
examples/: api_usage.py  calibration_sample.jsonl  seed.txt  simple_simulation.py
src/lean_swarm/: __init__.py  cli.py
src/lean_swarm/api/: app.py
src/lean_swarm/engine/: __init__.py  config.py  llm.py  logging.py  memory.py  models.py  population.py  simulator.py  world.py
src/lean_swarm/tools/: benchmark.py
src/leanswarm/: __init__.py  cli.py
src/leanswarm/api/: app.py
src/leanswarm/engine/: __init__.py  config.py  enrichment.py  llm.py  logging.py  memory.py  models.py  population.py  pricing.py  prompts.py  retrieval.py  semantic_store.py  simulator.py  world.py
src/leanswarm/tools/: benchmark.py
src/leanswarm/webui/: app.py  auth.py  chat.py  config.py  db.py  email.py  runs.py  schemas.py
tests/: test_api.py  test_benchmark.py  test_cli.py  test_engine.py  test_extraction.py  test_grounding.py  test_live_routing.py  test_llm.py  test_phase2_integration.py  test_pricing.py  test_semantic_memory.py  test_webui.py
web/: README.md  package.json
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  api.ts  keys.ts  theme.css  vite-env.d.ts
web/app/: globals.css  layout.jsx  page.jsx
web/lib/: simulation.js
(+26 files in other folders)
