[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanswarm"
version = "0.1.0"
description = "Lean Swarm multi-agent prediction and simulation engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mohith Das" }]
keywords = ["agents", "forecasting", "simulation", "llm", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = [
  "diskcache>=5.6,<6.0",
  "fastapi>=0.115,<1.0",
  "litellm>=1.72,<2.0",
  "networkx>=3.3,<4.0",
  "pydantic>=2.8,<3.0",
  "sentence-transformers>=3.0,<4.0",
  "sqlite-vss>=0.1.2; platform_system != 'Windows'",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "ruff>=0.6",
  "twine>=5.1",
]

[project.scripts]
lean-swarm = "lean_swarm.cli:main"

[project.urls]
Homepage = "https://github.com/mohith-das/leanswarm"
Repository = "https://github.com/mohith-das/leanswarm.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["lean_swarm"]
